k8s-multi-geth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-geth-deployment
  labels:
    app: multi-geth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-geth
  template:
    metadata:
      labels:
        app: multi-geth
    spec:
      hostNetwork: true
      containers:
      - name: multi-geth
        image: antsankov/multi-geth:1.9.16
        ports:
        - containerPort: 8545
          hostPort: 8545
        - containerPort: 8546
          hostPort: 8546
        volumeMounts:
        - name: "task-pv-storage"
          mountPath: /data/geth
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
